minimodificacion de titulo

--- a/Python/pairprogramming-python-leccion8-funciones-intro.ipynb
+++ b/Python/pairprogramming-python-leccion8-funciones-intro.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Ejercicios Pair Programming - Sprint 2\n",
     "## Lección 8 - Funciones Intro\n",
-    "### Lourdes, Silvia y Sonia"
+    "### Lourdes Ochoa, Silvia Gordón y Sonia Ruiz"
    ]
   },
   {
