subir ejer python

--- a/Python/pairprogramming-python-leccion10-clases.ipynb
+++ b/Python/pairprogramming-python-leccion10-clases.ipynb
@@ -87,27 +87,279 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creacion de clase y atributos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Empleados:\n",
+    "    def __init__(self, nombre, apellido, int_edad, cargo, int_inicio, int_vacaciones, list_skills):\n",
+    "        #lit_skills debe ser una lista\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido\n",
+    "        self.int_edad = int(int_edad)\n",
+    "        self.cargo = cargo\n",
+    "        self.int_inicio = int(int_inicio)\n",
+    "        self.int_vacaciones = int(int_vacaciones)\n",
+    "        self.list_skills = list_skills\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear una instancia para la clase creada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "silvia = Empleados('Silvia', 'Gordon', 30, 'Estudiante',2022, 20, ['Outlook', 'Excel', 'Python'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Outlook', 'Excel', 'Python']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silvia.list_skills"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creacion de metodos dentro de la clase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Empleados:\n",
+    "    def __init__(self, nombre, apellido, int_edad, cargo, int_inicio, int_vacaciones, list_skills):\n",
+    "        #lit_skills debe ser una lista\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido\n",
+    "        self.int_edad = int(int_edad)\n",
+    "        self.cargo = cargo\n",
+    "        self.int_inicio = int(int_inicio)\n",
+    "        self.int_vacaciones = int(int_vacaciones)\n",
+    "        self.list_skills = list_skills\n",
+    "\n",
+    "    def descripcion(self):\n",
+    "        return f'El/ella, es {self.nombre}, {self.cargo}, quien lleva con nostros en la empresa desde {self.int_inicio}. Además este año le quedan {self.int_vacaciones} dias de vacaciones'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "silvia = Empleados('Silvia', 'Gordon', 30, 'Estudiante',2022, 20, ['Outlook', 'Excel', 'Python'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El/ella, es Silvia, Estudiante, quien lleva con nostros en la empresa desde 2022. Además este año le quedan 20 dias de vacaciones'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silvia.descripcion()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Empleados:\n",
+    "    def __init__(self, nombre, apellido, int_edad, cargo, int_inicio, int_vacaciones, list_skills):\n",
+    "        #lit_skills debe ser una lista\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido\n",
+    "        self.int_edad = int(int_edad)\n",
+    "        self.cargo = cargo\n",
+    "        self.int_inicio = int(int_inicio)\n",
+    "        self.int_vacaciones = int(int_vacaciones)\n",
+    "        self.list_skills = list_skills\n",
+    "\n",
+    "    def descripcion(self):\n",
+    "        return f'El/ella, es {self.nombre}, {self.cargo}, quien lleva con nostros en la empresa desde {self.int_inicio}. Además este año le quedan {self.int_vacaciones} dias de vacaciones'\n",
+    "    \n",
+    "    def calculo_vacaciones(self):\n",
+    "        librar=int(input('¿Cuántos días te quieres de vacaciones?'))\n",
+    "        if self.int_vacaciones == 0:\n",
+    "            return 'Se te han acabado las vacaciones'\n",
+    "        elif self.int_vacaciones<librar:\n",
+    "            return 'No te puedes ir tantos dias de vacaciones'\n",
+    "        else:\n",
+    "            dias_disponibles=self.int_vacaciones-librar\n",
+    "            return f'Te quedan {dias_disponibles} dias de vacaciones'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Te quedan 0 dias de vacaciones'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silvia.calculo_vacaciones()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Empleados:\n",
+    "    def __init__(self, nombre, apellido, int_edad, cargo, int_inicio, int_vacaciones, list_skills):\n",
+    "        #lit_skills debe ser una lista\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido\n",
+    "        self.int_edad = int(int_edad)\n",
+    "        self.cargo = cargo\n",
+    "        self.int_inicio = int(int_inicio)\n",
+    "        self.int_vacaciones = int(int_vacaciones)\n",
+    "        self.list_skills = list_skills\n",
+    "\n",
+    "    def descripcion(self):\n",
+    "        return f'El/ella, es {self.nombre}, {self.cargo}, quien lleva con nostros en la empresa desde {self.int_inicio}. Además este año le quedan {self.int_vacaciones} dias de vacaciones'\n",
+    "    \n",
+    "    def calculo_vacaciones(self):\n",
+    "        librar=int(input('¿Cuántos días te quieres de vacaciones?'))\n",
+    "        if self.int_vacaciones == 0:\n",
+    "            return 'Se te han acabado las vacaciones'\n",
+    "        elif self.int_vacaciones<librar:\n",
+    "            return 'No te puedes ir tantos dias de vacaciones'\n",
+    "        else:\n",
+    "            dias_disponibles=self.int_vacaciones-librar\n",
+    "            return f'Te quedan {dias_disponibles} dias de vacaciones'\n",
+    "    \n",
+    "    def cambiando_posicion(self):\n",
+    "        for i in self.list_skills:\n",
+    "            lista_minusculas=[]\n",
+    "            a = i.lower()\n",
+    "            lista_minusculas.append(a)\n",
+    "\n",
+    "            if 'python' in lista_minusculas:\n",
+    "                print('Veo que estás utilizando Python. ¡Bien hecho!')\n",
+    "            if 'excel' in lista_minusculas:\n",
+    "                print('Veo que estás utilizando Excel, te recomiendo que empieces a utilizar Pandas')\n",
+    "        return\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Te recomiendo que dejes Excel y empieces a utilizar Pandas\n",
+      "Bien hecho\n"
+     ]
+    }
+   ],
+   "source": [
+    "silvia.cambiando_posicion()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Outlook', 'Excel', 'Python']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silvia.list_skills"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.6.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "468215beec16e96f99bc366ecab75b1d75db716e353e0417cbdb37be88f0d883"
    }
   }
  },
