--- a/Python/pairprogramming-python-leccion8-funciones-intro.ipynb
+++ b/Python/pairprogramming-python-leccion8-funciones-intro.ipynb
@@ -142,6 +142,161 @@
     "frase_prueba=input()\n",
     "convertir_string(frase_prueba)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BONUS 4. A Pete le gusta hacer pasteles. Tiene algunas recetas e ingredientes. Desgraciadamente, no se le dan bien las matemáticas. ¿Puedes ayudarle a averiguar cuántas tartas puede hacer teniendo en cuenta sus recetas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "receta1 = {'flour': 500, 'sugar': 200, 'eggs': 1}\n",
+    "ingredientes1 = {'flour': 1200, 'sugar': 1200, 'eggs': 5, 'milk': 200}\n",
+    "\n",
+    "def hacer_pasteles(dicc_receta, dicc_ingredientes):\n",
+    "    numero_bizcochos=[]\n",
+    "    for key in dicc_receta:\n",
+    "        if key not in dicc_ingredientes:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            numero_bizcochos.append(dicc_ingredientes[key]//dicc_receta[key])\n",
+    "    return min(numero_bizcochos)\n",
+    "\n",
+    "hacer_pasteles(receta1, ingredientes1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "receta2= {'apples': 3, 'flour': 300, 'sugar': 150, 'milk': 100, 'oil': 100}\n",
+    "ingredientes2= {'sugar': 500, 'flour': 2000, 'milk': 2000}\n",
+    "\n",
+    "hacer_pasteles(receta2, ingredientes2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BONUS 5. Escribid una función que va a ser una calculadora. La lista recibirá dos parámetros, una lista de números y un string con la operación que queremos hacer (puede ser \"*\", \"+\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculadora(lista_calculadora):\n",
+    "    for num in lista_calculadora:\n",
+    "        if lista_calculadora[1] == \"*\":\n",
+    "            multiplicacion=1\n",
+    "            for i in num:\n",
+    "                multiplicacion*=i\n",
+    "            return(multiplicacion)\n",
+    "        if lista_calculadora[1] == \"+\":\n",
+    "            suma=0\n",
+    "            for i in num: suma+=i\n",
+    "            return(suma)\n",
+    "        else:\n",
+    "            return(\"Lo siento, necesito que me pases una operacion valida\")\n",
+    "    return(lista_calculadora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12936"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista1 = [11, 6, 98, 1, 2] , \"*\"\n",
+    "calculadora(lista1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "214"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista2 = [23,34, 56, 11, 90] , \"+\"\n",
+    "calculadora(lista2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lo siento, necesito que me pases una operacion valida'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista3 = [23, 4,109 , 94, 77] , \"-\"\n",
+    "calculadora(lista3)"
+   ]
   }
  ],
  "metadata": {
