subida python y readme actualizados

--- a/Python/pairprogramming-python-leccion9-funciones-argumentos.ipynb
+++ b/Python/pairprogramming-python-leccion9-funciones-argumentos.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('...', '+', '...'), '=>', '......']"
+       "[('.....', '+', '................'), '=>', '.....................']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos(punto1,operador,punto2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('....', '-', '...'), '=>', '.']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos(punto1,operador,punto2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('.....', '*', '...'), '=>', '...............']"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos(punto1,operador,punto2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('.', '//', '..'), '=>', '']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos(punto1,operador,punto2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('..', '-', '..'), '=>', '']"
+      ]
+     },
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +253,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.. - . => .'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos2(calculadora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.. * .. => ....'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos2(calculadora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'... // .. => .'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos2(calculadora)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -201,96 +341,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2001']"
-      ]
-     },
-     "execution_count": 195,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sonia= 2001\n",
-    "sonia2= str(sonia)\n",
-    "type(sonia2)\n",
-    "sonia3= sonia2.split()\n",
-    "sonia4= set(sonia3)\n",
-    "sonia3\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2', '0', '0', '1']"
-      ]
-     },
-     "execution_count": 293,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sonia_lista=list(sonia2)\n",
-    "sonia_lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 294,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0', '1', '2'}"
-      ]
-     },
-     "execution_count": 294,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sonia_set=set(sonia_lista)\n",
-    "sonia_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def despedir_amigo(año):\n",
-    "    año_siguiente =año + 1\n",
-    "    año_palabra=str(año_siguiente)\n",
-    "    año_split=list(año_palabra)\n",
-    "    año_set=set(año_split)\n",
-    "    if len(año_set) < 4 and año_siguiente < 0:\n",
-    "        pass\n",
-    "    else:\n",
-    "        año_siguiente+=1\n",
-    "    return \n"
+    "def despedir_amigo(año, cumple=\"Nos vemos en el año:\"):\n",
+    "    año += 1\n",
+    "    while len(set(str(año))) != 4:\n",
+    "        año +=1\n",
+    "    return cumple, año\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Nos vemos en el año:', 7801)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "despedir_amigo(7712)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Nos vemos en el año:', 1023)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "despedir_amigo(1001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Nos vemos en el año:', 1203)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "despedir_amigo(1123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Nos vemos en el año:', 2013)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "despedir_amigo(2001)"
    ]
   },
   {
@@ -311,10 +450,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaporador(capacidad,perdida,umbral):\n",
+    "    dias = 0\n",
+    "    umbral = capacidad * umbral/100\n",
+    "    while capacidad >= umbral:\n",
+    "        capacidad -= capacidad * perdida/100\n",
+    "        dias += 1\n",
+    "    return f\"La vida de tu evaporador es de: {dias} días\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La vida de tu evaporador es de: 29 días'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaporador(10,10,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La vida de tu evaporador es de: 22 días'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaporador(10,10,10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -401,10 +588,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fb0= []\n",
+    "fb1= [\"Paola\"]\n",
+    "fb2= [\"Jacoba\", \"Alex\"] \n",
+    "fb3= [\"Maria\", \"Juana\", \"Lola\"] \n",
+    "fb4= [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\"]\n",
+    "fb5= [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def facebook(lista_fb):\n",
+    "    resto = len(lista_fb) - 2\n",
+    "\n",
+    "    if len(lista_fb) == 0:\n",
+    "        return \"A nadie le gusta esto\"\n",
+    "    elif len(lista_fb) == 1:\n",
+    "        return f\"A {lista_fb[0]} les gusta esto\"\n",
+    "    elif len(lista_fb) == 2:\n",
+    "        return f\"A {lista_fb[0]} y {lista_fb[1]} les gusta esto\"\n",
+    "    elif len(lista_fb) == 3:\n",
+    "        return f\"A {lista_fb[0]}, {lista_fb[1]} y {lista_fb[2]} les gusta esto\"\n",
+    "    elif len(lista_fb) == 4:\n",
+    "        return f\"A {lista_fb[0]}, {lista_fb[1]} y {resto} les gusta esto\"\n",
+    "    elif len(lista_fb) == 5:\n",
+    "        return f\"A {lista_fb[0]}, {lista_fb[1]} y {resto} les gusta esto\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A nadie le gusta esto'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facebook(fb0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Paola les gusta esto'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facebook(fb1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Jacoba y Alex les gusta esto'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facebook(fb2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Maria, Juana y Lola les gusta esto'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facebook(fb3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Alex, Jacoba y 2 les gusta esto'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facebook(fb4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Alex, Jacoba y 3 les gusta esto'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facebook(fb5)"
+   ]
   }
  ],
  "metadata": {
