--- a/Python/pairprogramming-python-leccion8-funciones-intro.ipynb
+++ b/Python/pairprogramming-python-leccion8-funciones-intro.ipynb
@@ -31,11 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sumar_string(string1,string2):\n",
+    "def sumar_string():\n",
+    "    string1 = input(\"Escriba un número\")\n",
+    "    string2 = input(\"Escriba un número\")\n",
     "    if string1 == \"\" and string2 == \"\":\n",
     "        return \"0\"\n",
     "    elif string1 == \"\" and not string2 == \"\":\n",
@@ -45,11 +47,49 @@
     "    else :\n",
     "        #ambos strings se deben convertir en integer para poder realizar la suma\n",
     "        sumar=int(string1) + int(string2)\n",
-    "        return sumar\n",
-    "\n",
-    "numero1= input()\n",
-    "numero2= input()\n",
-    "sumar_string(numero1, numero2)"
+    "        return sumar\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejemplo1= sumar_string()\n",
+    "ejemplo1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejemplo2= sumar_string()\n",
+    "ejemplo2"
    ]
   },
   {
@@ -71,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 64, 53, 17, 88]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def comparar_listas(lista1, lista2):\n",
     "    #convertirmos el zip de las listas en una lista para poder trabajar con ello, ya que un zip está \"codificado\".\n",
@@ -301,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.8 ('adalabenv')",
    "language": "python",
    "name": "python3"
   },
@@ -315,12 +366,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "468215beec16e96f99bc366ecab75b1d75db716e353e0417cbdb37be88f0d883"
+    "hash": "b09caf96bf0d00c87bf22d52d5d9b835bbcda673d84b7b1547b87932947942a4"
    }
   }
  },
