--- a/Python/pairprogramming-python-leccion11-gestion-ficheros.ipynb
+++ b/Python/pairprogramming-python-leccion11-gestion-ficheros.ipynb
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/solkiria/Documentos/ADALAB/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia/Python'"
+       "'/mnt/c/Users/silvia/Desktop/Adalab/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia/Python'"
       ]
      },
      "execution_count": 1,
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,26 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/solkiria/Documentos/ADALAB\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'primera-toma-contacto/datos'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_25608/1115889664.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msegunda_funcion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"saludo.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_25608/2501159793.py\u001b[0m in \u001b[0;36msegunda_funcion\u001b[0;34m(archivo)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"primera-toma-contacto/datos\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marchivo\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'primera-toma-contacto/datos'"
+      "/mnt/c/Users/silvia/Desktop/Adalab/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia\n",
+      "['Hola Adalabers!!!\\n', '\\n', 'Estamos en la sesión de pair-programming para familiarizarnos con la gestión de carpetas y ficheros desde Python 🙂🌊\\n', '\\n', 'Esto esta siendo suuuper divertidooooo']\n",
+      "Esto esta siendo suuuper divertidooooo\n"
      ]
     }
    ],
@@ -270,7 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"../../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +386,7 @@
        "'/mnt/c/Users/silvia/Desktop/Adalab/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia/primera-toma-contacto/datos'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +723,7 @@
        "'/mnt/c/Users/silvia/Desktop/Adalab/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia/primera-toma-contacto/datos'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,21 +744,50 @@
     "    root = tree.getroot()\n",
     "    print(f\" el tag de este fichero es {root.tag}\")\n",
     "    print(f\" los atributos de este fichero son {root.attrib}\")\n",
+    "    \n",
+    "    a = 0\n",
+    "    b = 0\n",
+    "    c = 0\n",
+    "    d= 0\n",
     "    for child in root:\n",
+    "        if a <= 1:\n",
+    "            print(f\" el tag del primer nivel es {child.tag}\")\n",
+    "            print(f\" los atributos de este fichero son {child.attrib}\")\n",
+    "            a+=1\n",
+    "        else:\n",
+    "            pass\n",
     "        for subchild in child:\n",
+    "            if b <= 1:\n",
+    "                print(f\" el tag del segundo nivel es {subchild.tag}\")\n",
+    "                print(f\" los atributos de este fichero son {subchild.attrib}\")\n",
+    "                b+=1\n",
+    "            else:\n",
+    "                pass\n",
     "            for subsubchild in subchild:\n",
+    "                if c <= 2:\n",
+    "                    print(f\" el tag del tercer nivel es {subsubchild.tag}\")\n",
+    "                    print(f\" los atributos de este fichero son {subsubchild.attrib}\")\n",
+    "                    c+=1\n",
+    "                else:\n",
+    "                    pass\n",
     "                for subsubsubchild in subsubchild:\n",
-    "                    for description in root.findall(\"description\"):\n",
-    "                        print(description.find('description').text)\n",
+    "                    if d <= 3:\n",
+    "                        print(f\" el tag del cuarto nivel es {subsubsubchild.tag}\")\n",
+    "                        print(f\" los atributos de este fichero son {subsubsubchild.attrib}\")\n",
+    "                        d+=1\n",
+    "                    else:\n",
+    "                        pass\n",
     "                    if subsubsubchild.tag == 'description':\n",
-    "                            print(root.find(\"genre\").find(\"decade\").find(\"movie\").find(\"description\").text)\n",
-    "                    if subsubsubchild.tag == \"year\":\n",
-    "                            print(root.find(\"genre\").find(\"decade\").find(\"movie\").find(\"year\").text)\n"
+    "                            print(\"Esta es las descripción de la película\")\n",
+    "                            print(subsubsubchild.text)\n",
+    "                    if subsubsubchild.tag == 'year':\n",
+    "                            print(\"Este es el año de la pelicula\")\n",
+    "                            print(subsubsubchild.text)      \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -769,51 +797,67 @@
       "/mnt/c/Users/silvia/Desktop/Adalab/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia/primera-toma-contacto/datos\n",
       " el tag de este fichero es collection\n",
       " los atributos de este fichero son {}\n",
+      " el tag del primer nivel es genre\n",
+      " los atributos de este fichero son {'category': 'Action'}\n",
+      " el tag del segundo nivel es decade\n",
+      " los atributos de este fichero son {'years': '1980s'}\n",
+      " el tag del tercer nivel es movie\n",
+      " los atributos de este fichero son {'favorite': 'True', 'title': 'Indiana Jones: The raiders of the lost Ark'}\n",
+      " el tag del cuarto nivel es format\n",
+      " los atributos de este fichero son {'multiple': 'No'}\n",
+      " el tag del cuarto nivel es year\n",
+      " los atributos de este fichero son {}\n",
+      "Este es el año de la pelicula\n",
       "1981\n",
+      " el tag del cuarto nivel es rating\n",
+      " los atributos de este fichero son {}\n",
+      " el tag del cuarto nivel es description\n",
+      " los atributos de este fichero son {}\n",
+      "Esta es las descripción de la película\n",
       "\n",
       "                'Archaeologist and adventurer Indiana Jones \n",
       "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
       "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "1981\n",
-      "\n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n"
+      " el tag del tercer nivel es movie\n",
+      " los atributos de este fichero son {'favorite': 'True', 'title': 'THE KARATE KID'}\n",
+      "Este es el año de la pelicula\n",
+      "1984\n",
+      "Esta es las descripción de la película\n",
+      "None provided.\n",
+      " el tag del tercer nivel es movie\n",
+      " los atributos de este fichero son {'favorite': 'False', 'title': 'Back 2 the Future'}\n",
+      "Este es el año de la pelicula\n",
+      "1985\n",
+      "Esta es las descripción de la película\n",
+      "Marty McFly\n",
+      " el tag del segundo nivel es decade\n",
+      " los atributos de este fichero son {'years': '1990s'}\n",
+      "Este es el año de la pelicula\n",
+      "2000\n",
+      "Esta es las descripción de la película\n",
+      "Two mutants come to a private academy for their kind whose resident superhero team must oppose a terrorist organization with similar powers.\n",
+      "Este es el año de la pelicula\n",
+      "1992\n",
+      "Esta es las descripción de la película\n",
+      "NA.\n",
+      "Este es el año de la pelicula\n",
+      "1992\n",
+      "Esta es las descripción de la película\n",
+      "WhAtEvER I Want!!!?!\n",
+      " el tag del primer nivel es genre\n",
+      " los atributos de este fichero son {'category': 'Thriller'}\n",
+      "Este es el año de la pelicula\n",
+      "1979\n",
+      "Esta es las descripción de la película\n",
+      "\"\"\"\"\"\"\"\"\"\n",
+      "Este es el año de la pelicula\n",
+      "1986\n",
+      "Esta es las descripción de la película\n",
+      "Funny movie on funny guy \n",
+      "Este es el año de la pelicula\n",
+      "2000\n",
+      "Esta es las descripción de la película\n",
+      "psychopathic Bateman\n"
      ]
     }
    ],
@@ -824,7 +868,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.8 ('adalabenv')",
    "language": "python",
    "name": "python3"
   },
@@ -838,12 +882,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "468215beec16e96f99bc366ecab75b1d75db716e353e0417cbdb37be88f0d883"
+    "hash": "b09caf96bf0d00c87bf22d52d5d9b835bbcda673d84b7b1547b87932947942a4"
    }
   }
  },
