--- a/Python/pairprogramming-python-leccion9-funciones-argumentos.ipynb
+++ b/Python/pairprogramming-python-leccion9-funciones-argumentos.ipynb
@@ -524,22 +524,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def primos(numero):\n",
     "    if numero < 1:\n",
     "        return False\n",
-    "    elif numero/numero == 1:\n",
-    "        return True\n",
     "    else:\n",
-    "        return(\"No has añadido un integer\")"
+    "        for i in range(2,numero):\n",
+    "            if (numero%i) == 0:\n",
+    "                return False\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
