update sql y python2

--- a/Python/pairprogramming-python-leccion10-clases.ipynb
+++ b/Python/pairprogramming-python-leccion10-clases.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,21 +233,21 @@
     "            return 'No te puedes ir tantos dias de vacaciones'\n",
     "        else:\n",
     "            dias_disponibles=self.int_vacaciones-librar\n",
-    "            return f'Te quedan {dias_disponibles} dias de vacaciones'\n"
+    "            return f'Vas a librar {librar} días. Te quedan {dias_disponibles} dias de vacaciones'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Te quedan 0 dias de vacaciones'"
+       "'Vas a librar 3 días. Te quedan 17 dias de vacaciones'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,15 +301,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Te recomiendo que dejes Excel y empieces a utilizar Pandas\n",
-      "Bien hecho\n"
+      "Veo que estás utilizando Excel, te recomiendo que empieces a utilizar Pandas\n",
+      "Veo que estás utilizando Python. ¡Bien hecho!\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.8 ('adalabenv')",
    "language": "python",
    "name": "python3"
   },
@@ -354,12 +354,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "468215beec16e96f99bc366ecab75b1d75db716e353e0417cbdb37be88f0d883"
+    "hash": "b09caf96bf0d00c87bf22d52d5d9b835bbcda673d84b7b1547b87932947942a4"
    }
   }
  },
