--- a/Python/pairprogramming-python-leccion11-gestion-ficheros.ipynb
+++ b/Python/pairprogramming-python-leccion11-gestion-ficheros.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,15 +187,6 @@
     "    # Hemos elegido la línea 5 ya que la línea 4 es un salto de línea y para poder verlo más claro visualizamos la siguiente.\n",
     "    print(archivo_abierto[4])\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
    ]
   },
   {
@@ -260,22 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/c/Users/silvia/Desktop/Adalab/DA-promoc-modulo1-sprint2-lourdes-silvia-sonia/primera-toma-contacto/datos'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.chdir(\"../../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.getcwd()\n",
-    "\n",
-    "os.chdir(\"./primera-toma-contacto/datos/\")"
+    "os.getcwd()"
    ]
   },
   {
